# BOSCH-Hackathon

./: .gitignore  CMakeLists.txt  DataPreprocessing.ipynb  DetectObstacles.cpp  Documentation.docx  LinearAllocator.cpp  README.md  TestMemory.cpp
Docs/: Documentation.docx  ~$cumentation.docx
include/: Allocator.h  LinearAllocator.h
